Optimized launcher